AC_INIT([sftp-server],[1])
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_RANLIB

AC_CHECK_HEADERS([bsm/audit.h bstring.h crypto/sha2.h crypt.h dirent.h endian.h fcntl.h features.h floatingpoint.h getopt.h glob.h gssapi/generic.h gssapi/gssapi_generic.h gssapi/gssapi.h gssapi/gssapi_krb5.h gssapi.h gssapi/krb5.h iaf.h ia.h inttypes.h lastlog.h libgen.h libutil.h limits.h linux/if_tun.h login/cap.h login.h maillock.h memory.h ndir.h netdb.h netgroup.h net/if_tun.h pam/pam_appl.h paths.h poll.h pty.h readpassphrase.h rpc/types.h security/pam_appl.h sha2.h shadow.h stddef.h stdint.h stdlib.h strings.h string.h sys/audit.h sys/bitypes.h sys/bsdtty.h sys/cdefs.h sys/dir.h sys/mman.h sys/mount.h sys/ndir.h sys/poll.h sys/prctl.h sys/pstat.h sys/ptms.h sys/select.h sys/statvfs.h sys/stat.h sys/stream.h sys/stropts.h sys/strtio.h sys/syslog.h sys/sysmacros.h sys/timers.h sys/time.h sys/types.h sys/un.h time.h tmpdir.h ttyent.h ucred.h unistd.h usersec.h util.h utime.h utmpx.h utmp.h vis.h])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_HEADER([config.h])
AC_OUTPUT
